--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     //    Pagination
-    implementation("androidx.paging:paging-runtime-ktx:3.1.0")
+    implementation("androidx.paging:paging-runtime-ktx:3.1.1")
+
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
 }
